--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -104,12 +104,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <version>2.5.0-cdh5.2.0</version>
+            <version>2.8.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-auth</artifactId>
-            <version>2.5.0-cdh5.2.0</version>
+            <version>2.8.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>2.6.0-mr1-cdh5.14.0-SNAPSHOT</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
