--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.5.0-cdh5.2.0</version>
+            <version>2.8.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>2.5.0-cdh5.2.0</version>
+            <version>2.8.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
